--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,9 @@ repositories {
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
   implementation "org.jetbrains.kotlin:kotlin-reflect"
+    implementation 'io.kotest:kotest-runner-junit5-jvm:4.1.1'
 
-  testImplementation("io.kotest:kotest-runner-junit5-jvm:$kotestVersion")
+    testImplementation("io.kotest:kotest-runner-junit5-jvm:$kotestVersion")
   testImplementation("io.kotest:kotest-assertions-core-jvm:$kotestVersion")
   testImplementation("io.kotest:kotest-extensions-junitxml-jvm:$kotestVersion")
 }
